[package]
name = "croquette"
version = "0.1.0"
authors = ["Maxime Augier <max@xolus.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
irc-proto = "0.15"
tokio = { version = "1.4", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"]}
rasta = { path = "../rasta" }
futures = "0.3"
serde_json = "1.0"

